theme(fix): more contrast in primary color

--- a/assets/scss/01-settings/_theme.scss
+++ b/assets/scss/01-settings/_theme.scss
@@ -24,7 +24,7 @@ $color-mode-type: data;
 $danger-text-emphasis: $deep-saffron;
 
 /// @deprecated
-$primary: $deep-saffron;
+$primary: #dc322f;
 
 /// global elements
 $border-width: 2px;
